--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>1</div>
+	<div>2</div>
+	<div>3</div>
+	<div>4</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
