--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body clas ="holder">
+<body class ="holder">
 	<!-- the entire body must be written by student -->
 	<div>1</div>
 	<div>2</div>
